Closed Bug 91930 Opened 23 years ago Closed 23 years ago

Browser not opening a window on first launch

Categories

(SeaMonkey :: General, defect)

PowerPC
Mac System 9.x
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: agracebush, Assigned: jag+mozilla)

References

Details

(Whiteboard: PDT+ fixed/verified on branch)

Attachments

(1 file)

Using branch build 2001072303 Mac Stub Installer (recommended setup type) 1. Install 2. Create profile/migrate old profile 3. activate or cancel or relaunch old profile actual results: Netscape 6 menu is seen, but now browser If I open file/Navigator Window, a small window opens (size of popup) and then it is usable. expected results: normal size browser window opens.
ah! Could this be related to http://bugzilla.mozilla.org/show_bug.cgi?id=91788? cc: selmer, sdagley, jaggernaut, jrgm, etc.
I didn't see this on my build at home this morning but I was using an existing profile. I'm re-building my office build now to pick up the other changes from the weekend and will check with a new profile when it finishes.
launching from icon on desktop opens a browser window but same popup size
PDT+, we need this resolved ASAP!
Whiteboard: PDT+
Just relaying some stuff jag told me, but that I have duplicated. This happens when using '-profilemanager' option. A window is in fact opened (look at the Tasks menu) but it is not visible. However, if I manually remove the change for bug 91788, I can still reproduce this bug on Mac, so this is not the cause.
selmer - need to reassign this to proper engineer.
QA Contact: doronr → gbush
You just got that comment in ahead of me reassigning it :-) Steve, I tagged you because you said you're working on it. Please do the right thing from there. We need a checkin today if we can get enough confidence. I'm concerned about jrgm's comment since we may have mis-attributed the cause and there were a number of other checkins recently. Has anyone run builds from the last several days to pinpoint when this actually started?
Assignee: asa → sdagley
I think it's the infamous bug 65993. I can reproduce this on my linux box with a certain regularity, but not always, so it seems like a timing issue. Anyway, my guess is that window watcher doesn't quite know how to deal with width/height set to NS_SIZETOCONTENT, so I'll work around that by not passing in a height/width when they're set to NS_SIZETOCONTENT. We're already doing that from XUL anyway, so passing that value in is redundant. Patch coming up.
So this seems to fix my linux box, but my Mac remains stubborn. Being slightly paranoid, I'm now doing a complete rebuild on the Mac, just in case.
Launching via the 'Netscape Profile Manager' icon seems to be a reliable way to invoke this bug (5 out of 5 tries for me)
And no, the patch from 07/23/01 14:03 doesn't quite work on Mac. I do get a window but it's sized _very_ small - only wide enough to show part of the Reload button and only tall enough for 4 sidebar tabs with the Classic skin
Hmmm, it seems to be working fine for me now in a clean build on the Mac (trunk).
Having seen it work on jag's Mac I too am trying a full re-build to see if in fact his patch does work
Fix verified from a full re-build. Reassigning to jaggernaut for checkin, r= sdagley.
Assignee: sdagley → jaggernaut
I have noticed that opening Mozilla by opening an unresponsive link in Sherlock results in no window behavior and subsequent weirdness. 2001072304 trunk for Mac.
Hirata, could you file a new bug on that? I think it's unrelated to this.
sr=jst
Should be all fixed now.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 91947 has been marked as a duplicate of this bug. ***
verified working on branch builds 2001072303 Mac/2001072304 Linux adding vtrunk reminder
Keywords: vtrunk
Whiteboard: PDT+ → PDT+ fixed/verified on branch
verified on trunk build 2001081004
Status: RESOLVED → VERIFIED
Keywords: vtrunk
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: