Bug 91930: browser window doesn't show up on first launch on new/migrated profiles. r=sdagley, sr=jst